# robosync

./: .gitignore  2025-07-29-grok-context-archive.txt  2025-07-29-please-load-context-and-continue.txt  2025-07-29-this-session-is-being-continued-from-a-previous-co.txt  2025-07-30-this-session-is-being-continued-from-a-previous-co.txt  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CRUSH.md  Cargo.toml  DEVELOPMENT_LOG_2025-08-05.md  GITHUB_READY.md  HOMEBREW_SUBMISSION.md  LICENSE  MACOS_TESTING_PLAN.md  PERFORMANCE_OPTIMIZATIONS.md  PKGBUILD  README.md  TESTING_PLAN_2.0.0.md  TROUBLESHOOTING.md  URGENT_ALL_AGENTS_STATUS.md  URGENT_STATUS_REQUEST.md  WINGET_SUBMISSION.md  ai-coordination.md  armroboclaude-v103-TODO.md  build-all-platforms.sh  build-releases.sh  chat.txt  claude-suggestions.md  debug_compare  debug_compare.rs  homebrew-formula-source.rb  homebrew-submission-guide.md  macroboclaude-v103-TODO.md  package-submission-guide.md  progress-consolidation-analysis.md  robocopy-compat.bat  robosync.json  robosync.nix  test-robocopy.bat  (+6 more)
.cargo/: config.toml
.github/workflows/: ci.yml
aur-package/: PKGBUILD
benches/: performance.rs  quick_performance.rs
coordination/: README.md  context-archive.md  create-test-data.ps1  create-test-data.sh  linux-initial-status.md  linux-to-mac-status.md  linux-to-windows-status.md  mac-troubleshooting-guide.md  macroboclaude-all-tests-pass.md  macroboclaude-benchmark-results.md  macroboclaude-coordination-complete.md  macroboclaude-deployment-status.md  macroboclaude-final-binary-details.md  macroboclaude-fix-confirmed.md  macroboclaude-homebrew-prep.md  macroboclaude-ready-for-release.md  macroboclaude-release-ready.md  macroboclaude-source-sync-response.md  macroboclaude-status-1.md  macroboclaude-urgent-response.md  master-coordination-plan.md  platform-differences.md  quick-test.sh  roboclaude-all-platforms-summary.md  roboclaude-aur-preparation.md  roboclaude-bugfix-1.md  roboclaude-bugfix-success.md  roboclaude-coordination-message.md  roboclaude-cycle-2-complete.md  roboclaude-final-assignments.md  roboclaude-final-status.md  roboclaude-package-instructions.md  roboclaude-platform-correction.md  roboclaude-release-preparation.md  roboclaude-source-sync-check.md  roboclaude-status-summary.md  roboclaude-status-update-1.md  roboclaude-update-cycle.md  roboclaude-urgent-bug.md  roboclaude-v101-coordination.md  (+9 more)
docs/: error_handling.md
examples/: error_reporting_example.rs  windows_symlinks.rs
homebrew-tap/: README.md
package-managers/: homebrew-formula-source.rb  homebrew-formula.rb
perf_test/small/: file_1000.txt  file_1007.txt  file_1009.txt  file_1016.txt  file_103.txt  file_1032.txt  file_1035.txt  file_104.txt  file_1040.txt  file_1047.txt  file_1049.txt  file_1072.txt  file_1075.txt  file_1091.txt  file_1096.txt  file_1098.txt  file_1111.txt  file_1116.txt  file_1118.txt  file_1123.txt  file_1124.txt  file_1132.txt  file_115.txt  file_1151.txt  file_1156.txt  file_1158.txt  file_1163.txt  file_1164.txt  file_1180.txt  file_1187.txt  file_1189.txt  file_1201.txt  file_1206.txt  file_1208.txt  file_1233.txt  file_1234.txt  file_1241.txt  file_1246.txt  file_1248.txt  file_1259.txt  (+608 more)
release/: robosync  robosync-linux-arm64  robosync-linux-x64
scripts/: prepare-release.sh
snap/: snapcraft.yaml
src/: adaptive_executor.rs  algorithm.rs  buffer_sizing.rs  checksum.rs  color_output.rs  compression.rs  concurrent_delta.rs  concurrent_mixed_strategy.rs  error.rs  error_logger.rs  error_report.rs  extent_copy.rs  fast_batch_copy.rs  fast_file_list.rs  file_list.rs  filesystem_info.rs  formatted_display.rs  hybrid_dam.rs  hybrid_dam_streaming_new.rs  integrity.rs  io_uring.rs  lib.rs  linux_fast_copy.rs  linux_parallel_sync.rs  logging.rs  macos_apfs.rs  macos_benchmarks.rs  macos_mmap.rs  macos_network_fs.rs  macos_zfs.rs  main.rs  metadata.rs  metadata_cache.rs  metadata_utils.rs  mission_critical.rs  mixed_strategy.rs  multi_progress.rs  native_tools.rs  network_fs.rs  operation_utils.rs  (+27 more)
temp/: CHANGELOG.md  COMPREHENSIVE_FINDINGS_REPORT.md  HYBRID_ORCHESTRATOR_PROPOSAL.md  README.md  ROADMAP.md  TESTING_PLAN_2.0.0.md  WINDOWS_TESTING_PLAN.md  WINDOWS_TEST_REPORT_2.0.0.md  gemini_suggestions.txt  roboclaude
tests/: automated_benchmark_validator.sh  benchmark_suite.sh  complete_functionality_test.ps1  comprehensive_benchmarks_5x.ps1  comprehensive_functionality_5x.ps1  cross_filesystem_test.rs  ext4_extent_test.rs  filesystem_info.rs  integration_test_suite.sh  macos_5x_test_script.sh  ntfs_fuse_test.rs  post_fix_validation_suite.sh  quick_test.sh  run_comprehensive_tests.sh  run_filesystem_tests.sh  run_functional_tests.sh  small_files_regression.sh  test_all_options.ps1  test_harness.sh  windows_5x_test_script.ps1  windows_ads_test.ps1  working_benchmark.sh  working_functional.sh  xfs_reflink_test.rs  zfs_nas_5x_test_script.sh
