[package]
name = "robosync"
version = "0.8.0"
edition = "2024"
authors = ["RoboSync Contributors"]
description = "High-performance file synchronization with intelligent concurrent processing"
license = "MIT"
repository = "https://github.com/roethlar/robosync"
readme = "README.md"
keywords = ["sync", "robocopy", "rsync", "backup", "file-transfer", "concurrent"]
categories = ["command-line-utilities", "filesystem"]
documentation = "https://docs.rs/robosync"
homepage = "https://github.com/yourusername/robosync"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Cryptography and hashing
blake3 = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
md-5 = "0.10"

# Compression
zstd = "0.13"
lz4_flex = "0.11"

# File system operations
walkdir = "2.0"
jwalk = "0.8"  # Parallel directory walking
filetime = "0.2"
memmap2 = "0.9"  # Memory-mapped files

# Linux-specific high-performance I/O
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"
nix = { version = "0.27", features = ["fs", "mman"] }

# Cross-platform support
crossbeam = "0.8"
rayon = "1.8"
num_cpus = "1.16"

# Progress reporting
indicatif = "0.18.0"
atty = "0.2"
crossterm = "0.27"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async traits
async-trait = "0.1"

# Other utilities
uuid = { version = "1.10", features = ["v4", "serde"] }

# Shimmer AI integration - compiler ready! 🎉
# shimmer-runtime = { path = "../llm-pl/crates/shimmer-runtime" }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "minwinbase", "handleapi"] }

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[[bin]]
name = "robosync"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[[bench]]
name = "performance"
harness = false