[package]
name = "robosync"
version = "0.8.29"
edition = "2024"
authors = ["RoboSync Contributors"]
description = "High-performance file synchronization with intelligent concurrent processing"
license = "MIT"
repository = "https://github.com/roethlar/robosync"
readme = "README.md"
keywords = ["sync", "robocopy", "rsync", "backup", "file-transfer", "concurrent"]
categories = ["command-line-utilities", "filesystem"]
documentation = "https://docs.rs/robosync"
homepage = "https://github.com/yourusername/robosync"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Cryptography and hashing
blake3 = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
md-5 = "0.10"

# Compression
zstd = "0.13"
lz4_flex = "0.11"

# File system operations
walkdir = "2.0"
jwalk = "0.8"  # Parallel directory walking
filetime = "0.2"
memmap2 = "0.9"  # Memory-mapped files
rayon = "1.8"
indicatif = "0.18.0"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
atty = "0.2"
uuid = { version = "1.10", features = ["v4", "serde"] }
async-trait = "0.1"
bincode = "1.3"

# Linux-specific high-performance I/O
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"
nix = { version = "0.27", features = ["fs", "mman"] }

# Cross-platform support
crossbeam = "0.8"

# Shimmer AI integration - compiler ready! 🎉
# shimmer-runtime = { path = "../llm-pl/crates/shimmer-runtime" }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "minwinbase", "handleapi", "winbase"] }

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[[bin]]
name = "robosync"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[[bench]]
name = "performance"
harness = false
